# code

./: LICENSE.txt  README.md
Chapter1_AndroidCartoonifier/: README.txt
Chapter1_AndroidCartoonifier/Cartoonifier_Android/: .classpath  .cproject  .project  AndroidManifest.xml
Chapter1_AndroidCartoonifier/Cartoonifier_Android/jni/: Android.mk  jni_part.cpp
Chapter1_AndroidCartoonifier/Cartoonifier_Android/res/values/: strings.xml
Chapter1_AndroidCartoonifier/Cartoonifier_Android/src/com/Cartoonifier/: CartoonifierApp.java  CartoonifierView.java  CartoonifierViewBase.java
Chapter1_AndroidCartoonifier/Cartoonifier_Desktop/: ImageUtils.h  ImageUtils_0.7.cpp  main_desktop.cpp
Chapter1_EmbeddedCartoonifier/: README.txt  install_opencv_from_source.sh
Chapter1_EmbeddedCartoonifier/Cartoonifier/: CMakeLists.txt  ImageUtils.h  ImageUtils_0.7.cpp  cartoon.cpp  cartoon.h  fps_timer.hpp  main.cpp
Chapter1_EmbeddedCartoonifier/Cartoonifier_Desktop/: CMakeLists.txt  ImageUtils.h  cartoon.cpp  cartoon.h  main_desktop.cpp
Chapter2_iPhoneAR/Example_MarkerBasedAR/: README.txt
Chapter2_iPhoneAR/Example_MarkerBasedAR/Example_MarkerBasedAR/: AppDelegate.h  AppDelegate.m  BGRAVideoFrame.h  CameraCalibration.cpp  CameraCalibration.hpp  DebugHelpers.hpp  EAGLView.h  EAGLView.m  Example_MarkerBasedAR-Info.plist  Example_MarkerBasedAR-Prefix.pch  GeometryTypes.cpp  GeometryTypes.hpp  Marker.cpp  Marker.hpp  MarkerDetectionFacade.hpp  MarkerDetector.cpp  MarkerDetector.hpp  SimpleVisualizationController.h  SimpleVisualizationController.mm  TinyLA.cpp  TinyLA.hpp  VideoSource.h  VideoSource.mm  ViewController.h  ViewController.mm  VisualizationController.h  cube.h  main.m
Chapter2_iPhoneAR/Example_MarkerBasedAR/Example_MarkerBasedAR.xcodeproj/: project.pbxproj
Chapter2_iPhoneAR/Example_MarkerBasedAR/Example_MarkerBasedAR.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Chapter2_iPhoneAR/Example_MarkerBasedAR/Example_MarkerBasedAR.xcodeproj/project.xcworkspace/xcuserdata/bloodaxe.xcuserdatad/: UserInterfaceState.xcuserstate
Chapter2_iPhoneAR/Example_MarkerBasedAR/Example_MarkerBasedAR.xcodeproj/project.xcworkspace/xcuserdata/bloodaxe.xcuserdatad/xcdebugger/: Expressions.xcexplist
Chapter2_iPhoneAR/Example_MarkerBasedAR/Example_MarkerBasedAR.xcodeproj/xcuserdata/bloodaxe.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
Chapter2_iPhoneAR/Example_MarkerBasedAR/Example_MarkerBasedAR.xcodeproj/xcuserdata/bloodaxe.xcuserdatad/xcschemes/: Example_MarkerBasedAR - Release.xcscheme  Example_MarkerBasedAR.xcscheme  xcschememanagement.plist
Chapter2_iPhoneAR/Example_MarkerBasedAR/Example_MarkerBasedAR/en.lproj/: MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard
Chapter2_iPhoneAR/Example_MarkerBasedAR/opencv2.framework/: opencv2
Chapter2_iPhoneAR/Example_MarkerBasedAR/opencv2.framework/Versions/A/Headers/: opencv_modules.hpp
Chapter2_iPhoneAR/Example_MarkerBasedAR/opencv2.framework/Versions/A/Resources/: Info.plist
Chapter3_MarkerlessAR/: CMakeLists.txt  README.txt
Chapter3_MarkerlessAR/src/: ARDrawingContext.cpp  ARDrawingContext.hpp  ARPipeline.cpp  ARPipeline.hpp  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.hpp  DebugHelpers.hpp  GeometryTypes.cpp  GeometryTypes.hpp  Pattern.cpp  Pattern.hpp  PatternDetector.cpp  PatternDetector.hpp  main.cpp
Chapter4_StructureFromMotion/: AbstractFeatureMatcher.cpp  AbstractFeatureMatcher.h  BundleAdjuster.cpp  BundleAdjuster.h  CMakeLists.txt  Common.cpp  Common.h  Distance.cpp  Distance.h  FindCameraMatrices.cpp  FindCameraMatrices.h  GPUSURFFeatureMatcher.cpp  GPUSURFFeatureMatcher.h  IDistance.h  IFeatureMatcher.h  MultiCameraDistance.cpp  MultiCameraDistance.h  MultiCameraPnP.cpp  MultiCameraPnP.h  OFFeatureMatcher.cpp  OFFeatureMatcher.h  README.txt  RichFeatureMatcher.cpp  RichFeatureMatcher.h  SfMUpdateListener.cpp  SfMUpdateListener.h  Triangulation.cpp  Triangulation.h  Visualization.cpp  Visualization.h  main.cpp  pointcloud.ply
Chapter5_NumberPlateRecognition/: CMakeLists.txt  DetectRegions.cpp  DetectRegions.h  OCR.cpp  OCR.h  OCR.xml  Plate.cpp  Plate.h  README.txt  SVM.xml  evalOCR.cpp  main.cpp  trainOCR.cpp  trainSVM.cpp
Chapter5_NumberPlateRecognition/utils/: eval.sh  renameFilesIt.sh  segmentAllFiles.sh
Chapter6_NonRigidFaceTracking/: README.txt
Chapter6_NonRigidFaceTracking/src/: CMakeLists.txt
Chapter6_NonRigidFaceTracking/src/opencv_hotshots/ft/: CMakeLists.txt  face_detector.cpp  face_detector.hpp  face_tracker.cpp  face_tracker.hpp  ft.hpp  ft_data.cpp  ft_data.hpp  patch_model.cpp  patch_model.hpp  shape_model.cpp  shape_model.hpp
Chapter6_NonRigidFaceTracking/src/opencv_hotshots/ft/exe/: CMakeLists.txt  annotate.cpp  train_face_detector.cpp  train_face_tracker.cpp  train_patch_model.cpp  train_shape_model.cpp  visualize_annotations.cpp  visualize_face_detector.cpp  visualize_face_tracker.cpp  visualize_patch_model.cpp  visualize_shape_model.cpp
Chapter7_HeadPoseEstimation/: CMakeLists.txt  PAW.cpp  PAW.h  README.txt  Triangle.cpp  Triangle.h  main.cpp  simple-aam.txt
Chapter8_FaceRecognition/: CMakeLists.txt  ImageUtils.h  ImageUtils_0.7.cpp  README.txt  detectObject.cpp  detectObject.h  main.cpp  preprocessFace.cpp  preprocessFace.h  recognition.cpp  recognition.h
Chapter9_FluidInteractionUsingKinect/: FluidSolver.cpp  FluidSolver.h  FluidSolverMultiUser.cpp  FluidSolverMultiUser.h  KinectController.cpp  KinectController.h  README.txt  fluidWall.cpp  fluidWall_2.cpp
